[package]
name = "twistributer"
version = "0.1.0"
authors = ["flum1025 <flum.1025@gmail.com>"]
edition = "2018"

[dependencies]
clippy = { version = "*", optional = true, git = "https://github.com/rust-lang-nursery/rust-clippy" }
cargo-make = "0.14.0"
iron = "0.6.0"
router = "0.6.0"
yaml-rust = "0.4.2"
logger = "0.4.0"
env_logger = "0.5.13"
serde_json = "1.0.28"
reqwest = "0.9.1"
log = "0.4.5"
futures = "0.1.24"
tokio = "0.1.8"

[features]
default = ['clippy']
